Kubernetes/stockAPI/overlay/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockAPI
spec:
  ingressClassName: nginx
  rules:
    - host: "app14.mfolabs.me"
      http:
        paths:
          - path: /api/Stock/
            pathType: Prefix
            backend:
              service:
                name: ServiceTitle
                port:
                  number: 8001
